# poker-calc

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
poker_calc/: CMakeLists.txt  Cards.cpp  Classify.cpp  Compare.cpp  Deck.cpp  LookupTables.cpp  Poker.cpp
poker_calc/include/: Cards.h  Compare.h  Deck.h  LookupTables.h  Poker.h  Random.h
src/: Deck.cpp  main.cpp
tests/: CMakeLists.txt  ClassifyTests.cpp  CompareTests.cpp  DeckTests.cpp
